<resources>
    <string name="app_name">Brave</string>
    <string name="action_settings">Settings</string>
    <string name="appUrlANDROID">https://play.google.com/store/apps/details?id=io.flyingmongoose.brave</string>
    <string name="appUrlIOS">https://Brave.io/Ios</string>
    <string name="appSiteUrl">http://www.brave.ly/download</string>
    <string name="facebook_app_id">1613107172034757</string>
    <string name="fb_login_protocol_scheme">fb1613107172034757</string>
    <string name="prefAlertDelay">alertDelay</string>
    <string name="etxtLoginUsernameHint">Username</string>
    <string name="etxtLoginPasswordHint">Password</string>
    <string name="btnLoginLogin">Login</string>
    <string name="btnLoginRegister">Register</string>
    <string name="btnloginResetPassword">Reset Password</string>
    <string name="copyrightNotice">Copyright © 2017 Flying Mongoose Pty Ltd</string>
    <string name="title_activity_register">Register</string>
    <string name="registerHeading">Welcome</string>
    <string name="etxtRegisterNameAndSurnameHint">Name and Surname</string>
    <string name="etxtRegisterUsernameHint">Username</string>
    <string name="etxtRegisterCellNumberHint">Contact Number</string>
    <string name="etxtRegisterEmailHint">Email</string>
    <string name="etxtRegisterPasswordHint">Password</string>
    <string name="etxtRegisterRetypePasswordHint">Retype Password</string>
    <string name="btnRegisterSubmit">Submit</string>
    <string name="btnRegisterCancel">Cancel</string>
    <string name="btnRegisterChooseCountry">Choose Country</string>
    <string name="txtvAgreeTAndC">I agree to </string>
    <string name="txtvTermsAndConditionsLink"> <u>Terms and Conditions</u></string>
    <string name="etxtSettingsName">Name</string>
    <string name="etxtSettingsCellNumber">Cell Number</string>
    <string name="etxtSettingsEmail">Email</string>
    <string name="swSettingsMuteNotifications">Mute Notifications</string>
    <string name="swSettingsAlertConfirmation">Activate Alert Confirmation</string>
    <string name="btnSettingsSignOut">Sign Out</string>
    <string name="diagPassResetTitle">Reset Password</string>
    <string name="diagPassResetDesc">Enter the email address associated with the account. You will receive an email with reset instructions.</string>
    <string name="title_activity_home_panic">Home</string>
    <string name="txtvProfileNameDefault">User Name Missing</string>
    <string name="map_follow">Follow</string>
    <string-array name="navEntries">
        <item>Home</item>
        <item>Groups</item>
        <item>History</item>
        <item>Settings</item>
    </string-array>
    <string-array name="navIcons">
        <item>@drawable/home</item>
        <item>@drawable/groups</item>
        <item>@drawable/history</item>
        <item>@drawable/settings</item>
    </string-array>
    <string name="navEntry1">Groups</string>
    <string name="navEntry2">Map</string>
    <string name="navEntry3"></string>
    <string name="navEntry4">History</string>
    <string name="navEntry5">Settings</string>
    <string name="navDrawerOpen">Open Navigation Drawer</string>
    <string name="navDrawerClosed">Close Navigation Drawer</string>
    <string name="btnNavHome">Home</string>
    <string name="btnNavMap">Map</string>
    <string name="fabCreateGroup">Create your own</string>
    <string name="fabJoinPrivateGroup">Join Private Group</string>
    <string name="fabJoinComGroup">Join a Community</string>
    <string name="groupNameHint">Group Name</string>
    <string name="groupDescriptionHint">Group Description</string>
    <string name="groupBtnCancel">Cancel</string>
    <string name="groupbtnFinish">Finish</string>
    <string name="groupBtnShare">Share</string>
    <string name="groupEdit">Edit</string>
    <string name="groupReport">Report</string>
    <string name="groupLeave">Leave</string>
    <string name="groupViewLocation">View Location</string>
    <string name="groupJoin">Join</string>
    <string name="fragGroupPublicSearchHint">Search group name</string>
    <string name="fragGroupPublicSearchDesc">Type at least 3 \ncharacters to search</string>
    <string name="diagJoinPvtGroupTitle">Join Private Group</string>
    <string name="diagJoinPvtGroupDesc">Enter the group code provided to you by another member</string>
    <string name="diagJoinPvtGroupGroupCodeHint">Group Code</string>
    <string name="diagJoinPvtGroupBtnJoin">JOIN</string>
    <string name="diagJoinPvtGroupBtnCancel">CANCEL</string>
    <string name="diagShareGroupTitle">Share </string>
    <string name="diagShareGroupMsgPrefix">Your group has been created, others can join your group via your unique group code: </string>
    <string name="diagShareGroupMsgSuffix">\n\nWould you like to share your group with others via:</string>
    <string name="diagShareGroupFacebookOption">Facebook</string>
    <string name="diagShareGroupWhatsappOption">Whatsapp</string>
    <string name="diagShareGroupTwitterOption">Twitter</string>
    <string name="diagShareGroupBtnOther">Other</string>
    <string name="diagShareGroupBtnSkip">Skip</string>
    <string name="diagShareGroupWANotInstalled">Whatsapp have not been installed</string>
    <string name="diagShareGroupShareMsgPrefix"> would like you to join their group on Brave.\nUse their group code  </string>
    <string name="diagShareGroupShareMsgSuffix">  to join</string>
    <string name="diagShareAppTitle">Share Brave</string>
    <string name="diagShareAppMsg">Great you have decided to share Brave. Helping others with random acts of kindness.</string>
    <string name="diagShareAppShareMsg">would like to show you Brave. An App than make random acts of kindness available to you.</string>
    <string name="diagFeedbackTitle">Feedback</string>
    <string name="diagFeedbackSubject">Subject</string>
    <string name="diagFeedbackExplanation">We would like to thank you for your support, your feedback is valuable to us.
        We use it to enhance your experience, so feel free to make suggestions.

        So what would you like to tell us?

    </string>
    <string name="diagFeedbackBtnSend">Send</string>
    <string name="diagFeedbackSubjectPrefix">Android Feedback from: </string>
    <string name="diagFeedbackSentSuccess">Feedback sent, Thank you.</string>
    <string name="diagPanicDescTitle">Add a message</string>
    <string name="diagPanicDescMessageHint">Message</string>
    <string name="diagPanicDescBtnSend">Send</string>
    <string name="diagPanicDescBtnSkip">Skip</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_manage_groups">ManageGroupsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_history_map">History</string>
    <string name="fragHistOthersDesc">Last 50 Alerts by others</string>
    <string name="fragHistYoursDesc">Last 20 Alerts called by you</string>
    <string name="error_100_no_internet">Please check your internet connection and try again.</string>
    <string name="error_cannot_be_empty">Cannot be empty</string>
    <string name="val_name_last_required">Please provide your last name as well</string>
    <string name="val_cell_number_length">Must be 10 or more digits</string>
    <string name="val_email_at_sign_required">Must contain @</string>
    <string name="val_email_only_one_at_sign">Must only have one @</string>
    <string name="val_email_domain_dot_required">Domain must have .</string>
    <string name="val_email_domain_cant_end_with_dot">domain cannot end with a .</string>
    <string name="val_email_domain_required">Must have domain name ie @domainname.com</string>
</resources>