<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/androidGrey800"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/txtvGroupPvtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/diagJoinPvtGroupTitle"
        android:textSize="20sp"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/txtvGroupPvtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/txtvGroupPvtTitle"
        android:textColor="@color/White"
        android:text="@string/diagJoinPvtGroupDesc"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtiLayGroupCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtvGroupPvtDesc">

        <EditText
            android:id="@+id/etxtGroupJoinPvtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diagJoinPvtGroupGroupCodeHint"
            android:textColorHint="@color/SeaGreen"
            android:textColor="@color/White"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srLayGroupsJoinPvt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/txtiLayGroupCode"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></View>

    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/btnGroupJoinPvt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/txtiLayGroupCode"
        android:background="@null"
        android:textColor="@color/White"
        android:text="@string/diagJoinPvtGroupBtnJoin"/>

    <Button
        android:id="@+id/btnGroupPvtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtiLayGroupCode"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:textColor="@color/White"
        android:text="@string/diagJoinPvtGroupBtnCancel"/>

</RelativeLayout>