<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ActivLogin"
    android:background="@drawable/main_bg7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@color/White"
        android:id="@+id/txtvAppHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="90dp" />

    <LinearLayout
        android:id="@+id/linLayUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/txtvAppHeading"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/OverlayMoreTranslucentBlack">

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:maxLines="1"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:textColorHint="@color/HintWhite"
            android:hint="@string/etxtLoginUsernameHint"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/linLayUsername"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="20dp"
        android:background="@color/OverlayMoreTranslucentBlack">

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:textColorHint="@color/HintWhite"
            android:hint="@string/etxtLoginPasswordHint"
            android:gravity="center"
            android:inputType="textPassword" />

    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btnLoginFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linLayPassword"/>


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srLayLogin"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/linLayPassword">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"></View>

    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_gradual_fade"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/txtvCopyrightNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/White"
        android:textSize="10sp"
        android:text="@string/copyrightNotice"/>

    <LinearLayout
        android:id="@+id/linLayLoginActionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtvCopyrightNotice"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/btnLoginLogin"
            android:textSize="24sp"
            android:textColor="@color/White"
            android:clickable="true"
            android:onClick="onClickLogin"
            android:id="@+id/btnLogin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/btnLoginRegister"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/White"
            android:clickable="true"
            android:onClick="onClickRegister"
            android:id="@+id/btnRegister" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/btnloginResetPassword"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:clickable="true"
            android:onClick="onClickResetPassword"
            android:id="@+id/btnResetPassword"/>

    </LinearLayout>

</RelativeLayout>
