<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:backgroundTint="@color/androidGrey800">

    <TextView
        android:id="@+id/diagFeedbackTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="18sp"
        android:text="@string/diagFeedbackTitle"
        android:textColor="@color/White"
        android:background="@color/SeaGreen"/>

    <TextView
        android:id="@+id/diagFeedbackExplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diagFeedbackTitle"
        android:layout_margin="16dp"
        android:textColor="@color/White"
        android:text="@string/diagFeedbackExplanation"/>

    <EditText
        android:id="@+id/diagFeedbackMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/diagFeedbackExplanation"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:layout_margin="16dp"
        android:lines="8"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/diagFeedbackProgCircle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@id/diagFeedbackMsg"
        android:layout_marginBottom="-125dp"/>

    <Button
        android:id="@+id/diagFeedbackBtnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/diagFeedbackMsg"
        android:layout_marginRight="16dp"
        android:background="@null"
        android:textColor="@color/White"
        android:text="@string/diagFeedbackBtnSend"/>

</RelativeLayout>