<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_55">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSettingsName"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/etxtSettingsName"
        android:textColorHint="@color/SeaGreen"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etxtSettingsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Weylin Renison"
            android:textColor="@color/White" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSettingsCellNumber"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/etxtSettingsCellNumber"
        android:textColorHint="@color/SeaGreen"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSettingsEmail">

        <EditText
            android:id="@+id/etxtSettingsCellNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/White" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSettingsEmail"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/etxtSettingsEmail"
        android:textColorHint="@color/SeaGreen"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintHorizontal_bias="0.29"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSettingsName">

        <EditText
            android:id="@+id/etxtSettingsEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/White" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/swSettingsMuteNotifications"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/swSettingsMuteNotifications"
        android:textColor="@color/SeaGreen"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSettingsCellNumber"/>

    <Switch
        android:id="@+id/swSettingsAlertConfirmation"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/swSettingsAlertConfirmation"
        android:textColor="@color/SeaGreen"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swSettingsMuteNotifications"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSettingsSignOut"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/btnSettingsSignOut"
        android:textColor="@color/White"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swSettingsAlertConfirmation"/>

</android.support.constraint.ConstraintLayout>